--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2 class="ttext">J'ai toujours été satisfait de toutes mes commandes de cryptos passées auprès de M-Services !</h2><br>
-          <img class="imagerond1" src="images/daron.jpg" alt="temoignage1">
+          <img class="imagerond1" src="images/Daron.jpg" alt="temoignage1">
           <p class="temoin"> <em>Alassane, Nikki, Bénin</em></p>
         </div>
         <div class="carousel-inner">
