--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     </div>
     <div class="row prix">
-      <div class="col-lg-4 col-md-6 col-sm-12 colprix">
+      <div class="col-lg-4 col-md-6 colprix">
         <div class="card">
           <div class="card-header grille">
             <h3>Vente cryptos</h3>
@@ -195,7 +195,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 col-sm-12 colprix">
+      <div class="col-lg-4 col-md-6  colprix">
         <div class="card">
           <div class="card-header grille">
             <h3>Formation cryptos</h3>
@@ -212,7 +212,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 col-sm-12 colprix">
+      <div class="col-lg-4 col-md-6  colprix">
         <div class="card">
           <div class="card-header grille">
             <h3>Dévelopement Web</h3>
@@ -229,7 +229,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 col-sm-12 colprix">
+      <div class="col-lg-4 col-md-6  colprix">
         <div class="card">
           <div class="card-header grille">
             <h3>Documents officiels</h3>
@@ -246,7 +246,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 col-sm-12 colprix">
+      <div class="col-lg-4 col-md-6  colprix">
         <div class="card">
           <div class="card-header grille">
             <h3>Web Entrepenariat</h3>
@@ -264,7 +264,7 @@
       </div>
 
 
-      <div class="col-lg-4 col-md-6 col-sm-12 colprix">
+      <div class="col-lg-4 col-md-6  colprix">
         <div class="card">
           <div class="card-header grille">
             <h3>Web Marketing</h3>
